# TurNavigator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.production.yaml  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260427_0001_create_catalog_tables.py  20260502_0001_legacy_planning_tables.py  20260502_0002_add_planning_tables.py  20260502_0003_fix_profile_schema.py  20260502_0004_relax_legacy_not_nulls.py  20260502_0005_add_planning_timestamp_defaults.py
backend/app/: main.py
backend/app/core/: __init__.py  env.py  settings.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  city.py  planning.py  poi.py  types.py
backend/app/schemas/: city.py  feedback.py  health.py  planning.py  poi.py  profile.py  route.py
backend/app/seeds/: cities.json  pois.json
backend/app/services/: catalog_repository.py  catalog_service.py  data_import.py  decision_log_store.py  import_persistence.py  media_urls.py  planning_serialization.py  poi_enrichment.py  profile_store.py  recommendation_store.py  recommender.py  route_builder.py  route_store.py  seed_loader.py  trip_store.py  website_media_enrichment.py
backend/app/tools/: __init__.py  catalog_quality_report.py  enrich_manual_seed_references.py  enrich_website_images.py  evaluate_recommender.py  export_openapi.py  import_city_catalog.py  normalize_poi_image_urls.py  seed_database.py  (+2 more)
backend/tests/: conftest.py  test_api_smoke.py  test_services.py
(+65 files in other folders)
